2006-02-03  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/rdfxmlparse.py: Simple wrapper for Redland, to produce
	parsing results in a form that is usable by the version importer.

	* sqlmap/import.py: Basic version importer.

	* sqlmap/create-schema.sql: Refine schema.

2006-01-31  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/create-schema.sql: Initial SQL script for creating the
	database schema.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* expression/nodes.py (UnaryOperation.__init__): Fix super call.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/generate.py: A proof-of-concept translator to SQL.

	* expression/rewrite.py (treeApplyObject): New function for
	executing diverse method of an object on the nodes of an
	expression tree.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.exprFromTriple): Use readable column
	names instead of positional references for the canonical S
	relation.

	* expression/nodes.py (FieldRef.__repr__): Show field identifier
	inside quotes.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.selectQueryExpr): 
	* expression/nodes.py (MapResult): 
	Replace Map and NameColumns by a single MapResult node that does
	column mapping and naming.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (selectQuery, graphPattern, pathExprList)
	(pathExpr, pathExprTail): Use the context stack.

	* serql/parser.py (Parser.__slots__, Parser.__init__) 
	(Parser.pushContext, Parser.popContext, Parser.currentContext):
	In preparation for nested SELECT queries, add a stack of
	SelectContext objects.
	(Parser.exprFromPattern, Parser.graphPatternExpr) 
	(Parser.selectQueryExpr, Parser.exprFromTriple): Use the new
	context stack.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* antlr.py: Include antlr.py in the source tree.
